Update page title to include 'Logistic Regression'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Logistic Regression Predictor</title>
+  <title>Logistic Regression Predictor (Logistic Regression) </title>
 </head>
 <body>
   <h2>Breast Cancer Prediction</h2>
