--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Logistic Regression Predictor (Logistic Regression) </title>
+  <title>Logistic Regression Predictor  </title>
 </head>
 <body>
-  <h2>Breast Cancer Prediction</h2>
+  <h2>Breast Cancer Prediction (Logistic Regression)</h2>
 
   <input id="features" placeholder="Comma-separated features" size="80"/>
   <button onclick="predict()">Predict</button>
